Cải thiện phần heaader

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         <!-- Header -->
         <main>
-            <header class="header">
+            <header class="fixed-header">
                 <div class="content">
                     <nav class="navbar">
                         <!-- Logo -->
@@ -39,8 +39,12 @@
                             <a href="#!" class="btn action-btn">Sign up</a>
                         </div>
                     </nav>
-
-                    <div class="hero hero">
+                </div>
+            </header>
+            
+            <div class="hero-wrap">
+                <div class="content">
+                    <div class="hero">
                         <div class="info">
                             <p class="sub-title">Welcome to Besnik Agency</p>
                             <h1 class="title">
@@ -61,7 +65,7 @@
                         />
                     </div>
                 </div>
-            </header>
+            </div>
 
             <!-- Clients -->
             <div class="clients">
