--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
     </head>
     <body>
         <!-- Header -->
-        <main>
+        <main id="home">
             <header class="fixed-header">
                 <div class="content">
                     <nav class="navbar">
                         <!-- Logo -->
-                        <a href="#!"><img src="./assets/img/logo.svg" alt="Besnik." /></a>
+                        <a href="#home"><img src="./assets/img/logo.svg" alt="Besnik." /></a>
 
                         <!-- Navigation -->
                         <ul>
-                            <li><a href="#!">Home</a></li>
-                            <li><a href="#!">Features</a></li>
-                            <li><a href="#!">Services</a></li>
-                            <li><a href="#!">Resources</a></li>
-                            <li><a href="#!">Contact</a></li>
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#services">Services</a></li>
+                            <li><a href="#features">Features</a></li>
+                            <li><a href="#resources">Resources</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
 
                         <!-- Action -->
@@ -110,7 +110,7 @@
             </div>
 
             <!-- Guides -->
-            <div class="guides">
+            <div class="guides" id="services">
                 <div class="content">
                     <h2 class="sub-title">How its works?</h2>
                     <p class="desc">
@@ -180,7 +180,7 @@
             </div>
 
             <!-- Featured  -->
-            <div class="featured">
+            <div class="featured" id="features">
                 <div class="content">
                     <header>
                         <h2 class="sub-title">Featured Properties</h2>
@@ -330,7 +330,7 @@
             </div>
 
             <!-- Stats -->
-            <div class="stats">
+            <div class="stats" id="resources">
                 <div class="content">
                     <div class="row">
                         <div class="img-block">
@@ -499,7 +499,7 @@
             </div>
 
             <!-- Subscription  -->
-            <div class="subscription">
+            <div class="subscription" id="contact">
                 <div class="content">
                     <div class="body">
                         <div class="info">
