--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     </head>
     <body>
         <!-- Header -->
-        <main id="home">
+        <main>
             <header class="fixed-header">
                 <div class="content">
                     <nav class="navbar">
                         <!-- Logo -->
-                        <a href="#home"><img src="./assets/img/logo.svg" alt="Besnik." /></a>
+                        <a href="#"><img src="./assets/img/logo.svg" alt="Besnik." /></a>
 
                         <!-- Navigation -->
                         <ul>
-                            <li><a href="#home">Home</a></li>
+                            <li><a href="#">Home</a></li>
                             <li><a href="#services">Services</a></li>
                             <li><a href="#features">Features</a></li>
                             <li><a href="#resources">Resources</a></li>
@@ -44,7 +44,6 @@
             
             <div class="hero-wrap">
                 <div class="content">
-                    <div class="hero">
                         <div class="info">
                             <p class="sub-title">Welcome to Besnik Agency</p>
                             <h1 class="title">
@@ -63,7 +62,6 @@
                             alt="Discover a place you'll love to live."
                             class="hero-img"
                         />
-                    </div>
                 </div>
             </div>
 
